--- a/greenEd_dev/www/templates/allstudents.html
+++ b/greenEd_dev/www/templates/allstudents.html
@@ -1,4 +1,4 @@
-<ion-view view-title="All Students">
+<ion-view view-title="{{title}}">
 
   <ion-nav-buttons side="secondary">
     <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
