--- a/greenEd_dev/www/templates/allclasses.html
+++ b/greenEd_dev/www/templates/allclasses.html
@@ -20,9 +20,14 @@
     Attendance
   </a>
 
-  <a href="#/app/allstudents/{{class.standard}}-{{class.division}}/reward" class="item item-icon-left">
+  <a href="#/app/allstudents/{{class.standard}}-{{class.division}}/addpoint" class="item item-icon-left">
+    <i class="icon ion-plus-circled positive"></i>
+    Add Point
+  </a>
+
+  <a href="#/app/allstudents/{{class.standard}}-{{class.division}}/points" class="item item-icon-left">
     <i class="icon ion-trophy positive"></i>
-    Rewards
+    Points
   </a>
 
   <a href="#/app/allstudents/{{class.standard}}-{{class.division}}/studentdashboard" class="item item-icon-left">
