--- a/greenEd_dev/www/templates/wall.html
+++ b/greenEd_dev/www/templates/wall.html
@@ -5,12 +5,12 @@
    <ion-content>
    <ion-refresher pulling-text="Pull to refresh" on-refresh="getWall(true)"></ion-refresher>
    <div ng-if="loading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
-    <div ng-hide="loading" ng-if="walls.length == 0" class="list">
+<!--     <div ng-hide="loading" ng-if="walls.length == 0" class="list">
     <a class="item item-icon-left" href="#">
     <i class="icon ion-ios-list positive"></i>
     No wall item found
     </a>
-   </div>
+   </div> -->
   <div class="list card" ng-repeat="(wk,wall) in walls">
   <div class="item item-avatar">
     <img ng-src="http://res.cloudinary.com/dnzljpk6o/image/upload/v1442348003/{{wall.uid}}.jpg">
