--- a/greenEd_dev/www/templates/markstudents.html
+++ b/greenEd_dev/www/templates/markstudents.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view="false">
    <ion-nav-title>{{title}}</ion-nav-title>
   <ion-nav-buttons side="secondary">
     <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
@@ -12,7 +12,7 @@
     <div class="list" ng-if="items.length > 0">
         <a collection-repeat="user in items" class="item item-icon-left  item-avatar custom-avatar positive" href="#/app/studentdashboard/{{user.class}}/{{user.uid}}/{{user.name}}" item-height="53" item-width="100%">
             <img ng-src="http://res.cloudinary.com/dnzljpk6o/image/upload/v1442348003/{{user.uid}}.png">
-            <h2>{{user.class.replace("-all", "")}} : {{user.name}}</h2>
+            <h2>{{user.class}} : {{user.name}}</h2>
         </a>
     </div>
 
