--- a/greenEd_dev/www/templates/points.html
+++ b/greenEd_dev/www/templates/points.html
@@ -1,7 +1,7 @@
 <ion-view title="{{title}} Points">
   <ion-nav-buttons side="secondary">
-    <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
-    </button>
+<!--     <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
+    </button> -->
   </ion-nav-buttons>
         <ion-tabs class="tabs-icon-top balanced">
             <ion-tab class="balanced" title="Positive ({{points[uid].positive}})" icon-on="ion-thumbsup" icon-off="ion-thumbsup" on-select="getItems()">
