--- a/greenEd_dev/www/templates/allstudents.html
+++ b/greenEd_dev/www/templates/allstudents.html
@@ -15,7 +15,7 @@
         <a ng-repeat="(i, student) in items | orderBy:['standard', 'studentid']" class="item item-icon-left  item-icon-right item-avatar custom-avatar positive" href="" ng-click="takeAction(i, student)" item-height="53" item-width="100%">
             <img ng-src="http://res.cloudinary.com/dnzljpk6o/image/upload/v1442348003/{{student.uid}}.png">
             <h2>{{student.standard}}<span ng-hide="student.division == 'all'">{{student.division}}</span> : {{student.name}}</h2>
-            <i ng-if="action == 'attendance' && role == 'hm'" class="icon" ng-class="{'ion-checkmark-round' : attendance[class][filters.month][filters.day][student.uid], 'ion-close-round assertive': !attendance[class][filters.month][filters.day][student.uid]}"></i>
+            <i ng-if="action == 'attendance' && role == 'hm'" class="icon" ng-class="{'ion-checkmark-round' : hmattendance[class][filters.month][filters.day][student.uid], 'ion-close-round assertive': !hmattendance[class][filters.month][filters.day][student.uid]}"></i>
             <i ng-if="action == 'attendance' && role == 'teacher'" class="icon" ng-class="{'ion-checkmark-round' : attendance[filters.month][filters.day][student.uid], 'ion-close-round assertive': !attendance[filters.month][filters.day][student.uid]}"></i>
             <span ng-if="action == 'addpoint' || action == 'points'">
               <span class="badge badge-assertive">{{rewards[class][student.uid].negative}}</span>
