--- a/greenEdBackend/app/views/wall.html
+++ b/greenEdBackend/app/views/wall.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="row row-sm">
-        <!--<div class="col-xs-6">
+        <div class="col-xs-6">
           <div class="card">
             <div class="card-heading">
               <h2>Trending</h2>
@@ -68,7 +68,7 @@
               </a>
             </div>
           </div>
-        </div>-->
+        </div>
       </div>
 
       <div class="row row-sm">
@@ -205,96 +205,10 @@
       </div>
     </div>
     <div class="col-sm-4">
-    <div class="card">
-      <div class="panel panel-card">
-        <div class="panel-heading b-b b-light">Class Percentage</div>
-        <div class="list-group no-border no-radius">
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-success"></i>
-            First Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-success"></i>
-            Second Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-success"></i>
-            Third Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-accent-lt"></i>
-            Fourth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">98%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-info"></i>
-            Fifth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-success"></i>
-            Fifth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">94%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-accent"></i>
-            Sixth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">92%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-accent"></i>
-            Seventh Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">90%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-accent"></i>
-            Eightth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">86%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-muted-lt"></i>
-            Nineth Standard
-          </div>
-          <div class="list-group-item">
-            <span class="pull-right">100%</span>
-            <i class="fa fa-fw fa-circle m-r-sm text-success"></i>
-            Tenth Standard
-          </div>
-        </div>
-      </div>
-    </div>
-      <div class="card">
-<!--         <div class="car"></div>
-        <div></div>
-        <div></div> -->
-        <div></div>
-        <div class="panel panel-card">
-        <div class="p">
-          Members
-        </div>
-        <div class="panel-body text-center">
-          <div class="m-v-lg">
-            Total Students
-            <div class="h2 text-success font-bold">2000</div>
-          </div>
-        </div>
-        <!--<div class="b-t b-light p">
-          Composite
-          <div class="progress progress-striped progress-sm r m-v-sm">
-            <div class="progress-bar purple" style="width:30%">30%</div>
-            <div class="progress-bar amber" style="width:20%">20%</div>
-          </div>
-        </div>-->
-      </div>
-      </div>
       <div class="card">
         <div class="card-heading">
-          <h2 class="font-thin">Teachers</h2>
-          <small>Click to know more</small>
+          <h2 class="font-thin">Interesting People</h2>
+          <small>Follow your favorites</small>
         </div>
         <div class="card-tools">
           <ul class="list-inline">
@@ -323,103 +237,71 @@
           <a href class="m-r-xs inline">
             <img src="images/a7.jpg" class="w-40 img-circle">
           </a>
-          <a class="btn btn-rounded btn-info">42+</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-heading">
-          <h2 class="font-thin">Toppers of Every Class</h2>
-          <small>Click to know more</small>
-        </div>
-        <div class="card-tools">
-          <ul class="list-inline">
-            <li class="dropdown">
-              <a md-ink-ripple data-toggle="dropdown" class="md-btn md-flat md-btn-circle">
-                <i class="mdi-navigation-more-vert text-md"></i>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-scale pull-right pull-up top text-color">
-                <li><a href>Action</a></li>
-                <li><a href>Another action</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <div class="card-divider"></div>
-        <div class="card-body">
-          <a href class="m-r-xs inline">
-            <img src="images/a1.jpg" class="w-40 img-circle">
-          </a>
-          <a href class="m-r-xs inline">
-            <img src="images/a2.jpg" class="w-40 img-circle">
-          </a>
-          <a href class="m-r-xs inline">
-            <img src="images/a3.jpg" class="w-40 img-circle">
-          </a>
-          <a href class="m-r-xs inline">
-            <img src="images/a9.jpg" class="w-40 img-circle">
-          </a>
-          <a class="btn btn-rounded btn-info">12+</a>
+          <a class="btn btn-rounded btn-info">99+</a>
         </div>
       </div>
       <div class="card">
         <div class="card-heading">
           <h2>Events</h2>
-          <small>Upcoming activities</small>
+          <small>You activities</small>
         </div>
         <div class="card-body">
           <div class="streamline b-l b-accent m-b m-l">
-            <div class="sl-item sl-item-md b-info">
+            <div class="sl-item sl-item-md">
               <div class="sl-icon">
-                <i class="fa fa-check text-info"></i>
+                <i class="fa fa-check text-muted-dk"></i>
               </div>
               <div class="sl-content">
-                <div class="text-muted-dk">17th October 10 AM</div>
-                <p>PTA Meeting Upto Fifth Standard<a href class="text-info"></a>.</p>
+                <div class="text-muted-dk">Just now</div>
+                <p>Finished task <a href class="text-info">#features 4</a>.</p>
               </div>
             </div>
             <div class="sl-item sl-item-md b-info">
               <div class="sl-icon">
-                <i class="fa fa-check text-info"></i>
+                <i class="fa fa-twitter text-info"></i>
               </div>
               <div class="sl-content">
-                <div class="text-muted-dk">24th October 11 AM</div>
-                <p>PTA Meeting for Sixth to Tenth Standards</p>
+                <div class="text-muted-dk">11:30</div>
+                <p><a href>@Jessi</a> retwit your post</p>
+              </div>
+            </div>
+            <div class="sl-item b-primary b-l">
+              <div class="sl-content">
+                <div class="text-muted-dk">10:30</div>
+                <p>Call to customer <a href class="text-info">Jacob</a> and discuss the detail.</p>
               </div>
             </div>
             <div class="sl-item sl-item-md b-warning">
-            <div class="sl-icon">
+              <div class="sl-icon">
                 <i class="fa fa-bolt text-warning"></i>
               </div>
               <div class="sl-content">
-                <div class="text-muted-dk">2nd November</div>
-                <p>TechSmart Science Fair at School Campus</p>
+                <div class="text-muted-dk">3 days ago</div>
+                <p><a href class="text-info">Jessi</a> commented your post.</p>
               </div>
             </div>
             <div class="sl-item b-info">
               <div class="sl-content">
-                <div class="text-muted-dk">9th November</div>
-                <p>Third Periodical Exam Starts</p>
+                <div class="text-muted-dk">Thu, 10 Mar</div>
+                <p>Trip to the moon</p>
               </div>
             </div>
             <div class="sl-item b-info">
               <div class="sl-content">
-                <div class="text-muted-dk">7th December</div>
-                <p>Half Yearly Exam Starts</p>
-              </div>
-            </div>
-            <div class="sl-item sl-item-md b-info">
-              <div class="sl-icon">
-                <i class="fa fa-check text-info"></i>
-              </div>
-              <div class="sl-content">
-                <div class="text-muted-dk">22nd December</div>
-                <p>Xmas Day Celebrations</p>
+                <div class="text-muted-dk">Sat, 5 Mar</div>
+                <p>Prepare for presentation</p>
               </div>
             </div>
             <div class="sl-item">
               <div class="sl-content">
-                <div class="text-muted-dk">22nd December</div>
-                <p>School Closes for Xmas Holidays</p>
+                <div class="text-muted-dk">Sun, 11 Feb</div>
+                <p><a href class="text-info">Jessi</a> assign you a task <a href class="text-info">Mockup Design</a>.</p>
+              </div>
+            </div>
+            <div class="sl-item">
+              <div class="sl-content">
+                <div class="text-muted-dk">Thu, 17 Jan</div>
+                <p>Follow up to close deal</p>
               </div>
             </div>
           </div>
