--- a/qcityguide/www/templates/app/ion_nav_view.html
+++ b/qcityguide/www/templates/app/ion_nav_view.html
@@ -13,14 +13,14 @@
                     <i class="icon ion-home"></i>
                     Home
                 </ion-item>
-                <ion-item menu-close class="item-icon-left" ui-sref="app.category">
+<!--                 <ion-item menu-close class="item-icon-left" ui-sref="app.category">
                     <i class="icon ion-clipboard"></i>
                     Menu
                 </ion-item>
                 <ion-item menu-close class="item-icon-left" ui-sref="app.category">
                     <i class="icon ion-star"></i>
                     Favorites
-                </ion-item>
+                </ion-item> -->
                 <ion-item menu-close class="item-icon-left" ui-sref="app.profile">
                     <i class="icon ion-person"></i>
                     Profile
