--- a/qcityguide/www/templates/app/product_menu.html
+++ b/qcityguide/www/templates/app/product_menu.html
@@ -4,6 +4,9 @@
             <ion-nav-buttons>
                 <button class="button button-clear button-icon" ng-click="goBack()" ><i class="ion-chevron-left"></i></button>
             </ion-nav-buttons>
+            <ion-nav-buttons side="right">
+                <button class="button button-icon button-clear ion-map" ng-click="gotoNearby()"></button>
+           </ion-nav-buttons>
         </ion-nav-bar>
     </ion-header-bar>
     <ion-content>
