--- a/qcityguide/www/css/maxx-style.css
+++ b/qcityguide/www/css/maxx-style.css
@@ -1,3 +1,9 @@
+map {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.scroll {height: 100%}
 /* Empty. Add your own CSS if you like */
 @font-face {
   font-family: 'Berkshire Swash';
@@ -315,11 +321,6 @@ input.input-qty {
   margin: 0 10px; }
 
 /* PAGE SHOPPING CART */
-map {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
 .page-intro .slider-pager {display:none;}
 .category-list ion-header-bar {background: none; border: 0 none;}
 .category-list ion-content {top: 0;}
