--- a/qcityguide/www/templates/nearby.html
+++ b/qcityguide/www/templates/nearby.html
@@ -1,11 +1,10 @@
-<ion-view>
+<ion-view class="category-list">
     <ion-header-bar align-title="center">
         <div class="buttons">
             <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
         </div>
-        <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content>
-        content
-    </ion-content>
+    <ion-content scroll="false" data-tap-disabled="true">
+          <map on-create="mapCreated(map)"></map>
+        </ion-content>
 </ion-view>
