--- a/qcityguide/www/templates/intro.html
+++ b/qcityguide/www/templates/intro.html
@@ -9,9 +9,9 @@
                                 <div class="row">
                                     <div class="col col-80 col-offset-10">
                                         <div class="logo">
-                                            <span>Coffee</span>
+                                         <span>QATAR</span>
                                         </div>
-                                        <p>Bring home the coffee they serve in award winning restaurants.</p>
+                                        <p>City Guide</p>
                                         <button ui-sref="app.category" class="button-get-started button button-outline button-light">
                                             Get Started
                                         </button>
