--- a/qcityguide/www/templates/app/product_menu.html
+++ b/qcityguide/www/templates/app/product_menu.html
@@ -12,8 +12,9 @@
                 <div class="item item-thumbnail-left item-text-wrap" ng-click="productDetail({{product.id}})">
                     <img ng-src={{product.img}}>
 
-                    <h2>{{product.name}}</h2>
-
+                    <h2>{{product.title}}</h2>
+                    <h5>{{product.type}}</h5>
+                    <h5>{{product.status}}</h5>
                     <div class="price">{{product.price}}</div>
                     <div class="like"><i class="ion-heart"></i> {{product.like}}</div>
                 </div>
