--- a/qcityguide/www/templates/app/ion_nav_view.html
+++ b/qcityguide/www/templates/app/ion_nav_view.html
@@ -6,24 +6,16 @@
     <ion-side-menu side="left">
         <ion-content>
             <div class="side-menu-logo">
-                <a class="logo">Hoss</a>
+                <a class="logo"><img src="img/qlogo.png"></a>
             </div>
-            <ion-list class="sidebar list-no-border">
+            <ion-list class="sidebar">
                 <ion-item menu-close class="item-icon-left" ui-sref="app.category">
-                    <i class="icon ion-home"></i>
-                    Home
+                    <i class="icon ion-home positive"></i>
+                    Categories
                 </ion-item>
-<!--                 <ion-item menu-close class="item-icon-left" ui-sref="app.category">
-                    <i class="icon ion-clipboard"></i>
-                    Menu
-                </ion-item>
-                <ion-item menu-close class="item-icon-left" ui-sref="app.category">
-                    <i class="icon ion-star"></i>
-                    Favorites
-                </ion-item> -->
                 <ion-item menu-close class="item-icon-left" ui-sref="app.profile">
-                    <i class="icon ion-person"></i>
-                    Profile
+                    <i class="icon ion-person positive"></i>
+                    About us
                 </ion-item>
             </ion-list>
         </ion-content>
