--- a/qcityguide/www/templates/nearby.html
+++ b/qcityguide/www/templates/nearby.html
@@ -1,12 +1,7 @@
 <ion-view>
-    <ion-header-bar align-title="center">
+    <ion-header-bar align-title="center" class="bar-light">
         <div class="buttons">
-            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-        </div>
-    </ion-header-bar>
-    <ion-header-bar align-title="center" class="bar-positive">
-        <div class="buttons">
-            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+        	<button class="button button-clear button-icon" ng-click="goBack()" ><i class="ion-chevron-left"></i></button>
         </div>
         <h1 class="title">Nearby Shops</h1>
         <div class="buttons buttons-right">
