--- a/qcityguide/www/templates/app/profile.html
+++ b/qcityguide/www/templates/app/profile.html
@@ -10,7 +10,7 @@
         <div class="box">
             <div class="info">
                 <div class="avatar">
-                    <img src="img/avatar.jpg" alt="avatar" />
+                    <img src="img/ionic.png" alt="avatar" />
                 </div>
                 <h2 class="name">Beverly Williams</h2>
                 <div class="position">UX/UI App Designer</div>
