--- a/qcityguide/www/templates/app/ion_nav_view.html
+++ b/qcityguide/www/templates/app/ion_nav_view.html
@@ -10,11 +10,11 @@
             </div>
             <ion-list class="sidebar">
                 <ion-item menu-close class="item-icon-left" ui-sref="app.category">
-                    <i class="icon ion-home positive"></i>
+                    <i class="icon ion-ios-list-outline positive"></i>
                     Categories
                 </ion-item>
                 <ion-item menu-close class="item-icon-left" ui-sref="app.profile">
-                    <i class="icon ion-person positive"></i>
+                    <i class="icon ion-person-stalker positive"></i>
                     About us
                 </ion-item>
             </ion-list>
