--- a/qcityguide/www/templates/app/product_detail.html
+++ b/qcityguide/www/templates/app/product_detail.html
@@ -1,38 +1,18 @@
 <ion-modal-view>
     <ion-content class="header-background">
         <ion-header-bar align-title="center">
-            <h1 class="title">{{cate.name}}</h1>
+            <h1 class="title">{{items[shopid].title}}</h1>
             <button class="button button-clear button-icon icon ion-android-close" ng-click="closeModal()"></button>
         </ion-header-bar>
 
         <form>
-            <div class="product-header" style="background: url({{product.imgLg}}) no-repeat; background-size: cover;">
-                <h2 class="product-name">{{product.name}}</h2>
-                <div class="product-price">{{product.price}}</div>
-                <div class="product-like">
-                    <button class="button button-clear" ng-click="doLike()">
-                        <i class="ion-heart"></i>
-                    </button>
-                </div>
+            <div class="product-header" style="background: url({{'img/category/'+categoryid+'.png'}}) no-repeat; background-size: cover;">
+                <h2 class="product-name">{{items[shopid].title}}</h2>
+                <div class="product-price">{{items[shopid].type}}</div>
             </div>
             <div class="product-body">
                 <div class="product-info">
-                    Dramatically conceptualize high-quality results with professional materials. Competently negotiate innovative information through interdependent customer service. Efficiently customize corporate sources after user-centric internal or "organic".
-                </div>
-                <div class="product-quantity">
-                    <label class="item item-input">
-                        <input type="text" placeholder="Enter Quantity Here...">
-                    </label>
-                </div>
-                <div class="add-to-cart">
-                    <button class="button button-block button-balanced" ng-click="doOrder()">
-                        Add to Cart
-                    </button>
-                </div>
-                <div class="add-to-favorites">
-                    <button class="button button-block button-dark">
-                        Add to Favorites
-                    </button>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                 </div>
             </div>
         </form>
