--- a/qcityguide/www/templates/app/profile.html
+++ b/qcityguide/www/templates/app/profile.html
@@ -1,10 +1,9 @@
-<ion-view view-title="Profile">
+<ion-view view-title="Profile" class="category-list">
     <ion-content id="page-profile" class="header-background" scroll="false">
         <ion-header-bar align-title="center">
             <div class="buttons">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
             </div>
-            <h1 class="title">Profile</h1>
         </ion-header-bar>
 
         <div class="box">
@@ -12,8 +11,8 @@
                 <div class="avatar">
                     <img src="img/ionic.png" alt="avatar" />
                 </div>
-                <h2 class="name">Beverly Williams</h2>
-                <div class="position">UX/UI App Designer</div>
+                <h2 class="name">Qatar</h2>
+                <div class="position">City Guide</div>
                 <div class="links">
                     <div class="row">
                         <div class="col">
@@ -34,13 +33,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+<!--                 <div class="row">
                     <div class="col">
                         <button ui-sref="app.category" class="button-follow button button-block button-outline button-light">
                             Folllow
                         </button>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
