--- a/qcityguide/www/templates/nearby.html
+++ b/qcityguide/www/templates/nearby.html
@@ -3,7 +3,7 @@
         <div class="buttons">
         	<button class="button button-clear button-icon" ng-click="goBack()" ><i class="ion-chevron-left"></i></button>
         </div>
-        <h1 class="title">Nearby Shops</h1>
+        <h1 class="title">{{title}}</h1>
         <div class="buttons buttons-right">
             <button class="button button-icon button-clear ion-funnel" ng-click="filterSettings()"></button>
         </div>
