--- a/qcityguide/www/css/maxx-style.css
+++ b/qcityguide/www/css/maxx-style.css
@@ -100,7 +100,11 @@ a {
     bottom: 10%;
     left: 50%;
     margin-left: -85px; }
-
+  #page-intro .get-started-loading {
+    position: absolute;
+    bottom: 20%;
+    left: 48%;
+  }
 /* PAGE CATEGORY */
 .cate-lv1 {
   list-style: none;
