--- a/qcityguide/www/templates/intro.html
+++ b/qcityguide/www/templates/intro.html
@@ -15,7 +15,7 @@
                                         <button ng-click="start()" class="button-get-started button button-outline button-light">
                                             Get Started
                                         </button>
-                                        <div ng-show="loading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
+                                        <div ng-show="loading" class="get-started-loading padding"><ion-spinner icon="android"></ion-spinner></div>
                                     </div>
                                 </div>
                             </div>
