--- a/qcityguide/www/templates/category.html
+++ b/qcityguide/www/templates/category.html
@@ -7,7 +7,7 @@
     <ion-content>
         <div ng-show="loading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
         <ul class="cate-lv1">
-            <li class="item-background cate-lv1-item" ng-repeat="(k, cate) in cates" ui-sref="product_menu({ cateId: k, cateTitle: cate.title })"
+            <li class="item-background cate-lv1-item" ng-repeat="(k, cate) in cates" ui-sref="product_menu({ cateId: cate.id, cateTitle: cate.name })"
             style="background: url({{cate.img}}) no-repeat; background-size: cover;">
                 <div class="item-wrapper">
                     <h2>{{cate.name}}</h2>
